syntax = "proto3";

package ai.metathings.service.camera;

enum CameraState {
	CAMERA_STATE_UNKNOWN = 0;
	CAMERA_STATE_STOP = 1;
	CAMERA_STATE_STARTING = 2;
	CAMERA_STATE_TERMINATING = 3;
	CAMERA_STATE_RUNNING = 4;
}

message CameraConfig {
	string url = 1;
	string device = 2;
	uint32 width = 3;
	uint32 height = 4;
	uint32 bitrate = 5;
	uint32 framerate = 6;
}

message Camera {
	CameraState state = 1;
	CameraConfig config = 2;
}
