syntax = "proto3";

package ai.metathings.service.camera;

import "camera.proto";

message StopResponse {
	Camera camera = 1;
}
