syntax = "proto3";

package ai.metathings.service.core_agent;

enum EntityState {
	ENTITY_STATE_UNKNOWN = 0;
	ENTITY_STATE_ONLINE = 1;
	ENTITY_STATE_OFFLINE = 2;
}

message Entity {
	string id = 1;
	string name = 2;
	string service_name = 3;
	string endpoint = 4;
	EntityState state = 5;
}
